# lead-scraper

./: docker-compose.yml  pyproject.toml  requirements.txt
src/scrapping/: scrapper.py  storage_data.py
src/utils/: minioHandler.py
