[project]
name = "lead-scraper"
version = "0.1.0"
description = "webscraping de dados publicos de cnpjs"
authors = [
    {name = "Matheus Araldi",email = "araldi_matheus@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
